# gpu-multigrid-framework

./: .gitignore  CMakeLists.txt  README.md  compile.sh  debug.sh  plot.py
accuracy/: accuracy.py
accuracy/heat_equation_1d/: README.md  results_linear_2nd_order.txt  results_nonlinear_2nd_order.txt  run_error_plot.sh
accuracy/heat_equation_2d/: README.md  plot_errors.py  results_linear_2nd_order.txt  results_nonlinear_2nd_order.txt  run_error_plot.sh
examples/: CMakeLists.txt
examples/heat_equation_1d_2nd_order/: CMakeLists.txt  README.md  equation.cpp  equation.hpp  iterator_async.cu  iterator_async.cuh  iterator_async_smem.cu  iterator_async_smem.cuh  iterator_cpu.cu  iterator_cpu.cuh  iterator_naive.cu  iterator_naive.cuh  lhs_cpu.cu  lhs_cpu.cuh  lhs_naive.cu  lhs_naive.cuh  main.cpp  plot_errors.py  rhs.hpp
examples/heat_equation_1d_4th_order/: CMakeLists.txt  README.md  equation.hpp  iterator_async.cu  iterator_async_smem.cu  iterator_async_smem.cuh  iterator_cpu.cu  iterator_cpu.cuh  iterator_naive.cu  iterator_naive.cuh  lhs_naive.cu  lhs_schemes.cuh  lhs_smem.cu  main.cpp  run_error_plot.sh
examples/heat_equation_2d_2nd_order/: CMakeLists.txt  equation.cpp  equation.hpp  iterator_cpu.cpp  iterator_cpu.hpp  iterator_naive.cu  iterator_naive.cuh  lhs_cpu.cpp  lhs_cpu.hpp  lhs_naive.cu  lhs_naive.cuh  main.cpp
examples/nonlinear_1d_2nd_order/: CMakeLists.txt  README.md  equation.cpp  equation.cu  equation.cuh  equation.hpp  iterator.cu  iterator.cuh  iterator_async.cu  iterator_async.cuh  lhs.cu  lhs.cuh  lhs_cpu.cpp  lhs_cpu.hpp  lhs_naive.cu  lhs_naive.cuh  main.cpp  rhs.cpp  rhs.hpp
examples/nonlinear_2d/: equation.cu  equation.cuh  iterator_cpu.cpp  iterator_cpu.hpp  iterator_naive.cu  iterator_naive.cuh  lhs_cpu.cpp  lhs_cpu.hpp  lhs_naive.cu  lhs_naive.cuh  main.cpp
examples/utilities/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.hpp  results.cpp  results.hpp
performance/: CMakeLists.txt
performance/cpu_gpu_ratio/: CMakeLists.txt  README.md  equation.cpp  equation.hpp  iterator_async.cu  iterator_async.cuh  iterator_async_smem.cuh  iterator_cpu.cu  iterator_schemes.cuh  lhs_naive.cuh  lhs_schemes.cuh  main.cpp  rhs.cpp  schemes.cuh
performance/cpu_gpu_ratio_2d/: CMakeLists.txt  README.md  data_levels_10_cpu_1.csv  data_levels_10_cpu_2.csv  data_levels_10_cpu_4.csv  data_levels_10_cpu_8.csv  main.cpp  plot.py  run.sh
performance/iterator/: CMakeLists.txt  README.md  equation.cpp  equation.hpp  iterator_async.cuh  iterator_async_smem.cu  iterator_async_smem.cuh  iterator_cpu.cu  iterator_cpu.cuh  main.cpp
performance/lhs/: CMakeLists.txt  README.md  equation.cpp  equation.hpp  lhs_cpu.cu  lhs_cpu.cuh  lhs_smem.cu  lhs_smem.cuh  main.cpp
performance/runtimes_2d/: CMakeLists.txt  README.md  main.cpp  plots.py  run.sh
plots/: .gitignore  accuracy.py  runtimes.py  speedup.py
plots/accuracy_linear/: plot_errors.py
plots/accuracy_nonlinear/: plot_errors.py  run_error_plot.sh
plots/example_linear/: plot_errors.py  run_error_plot.sh
plots/example_nonlinear/: plot_errors.py  run_error_plot.sh
plots/ratio/: plots.py  run.sh  run_profiler.sh
plots/runtimes/: plots.py  run.sh
scripts/: plot_2d.py
src/: CMakeLists.txt  array.hpp  cycles.cpp  cycles.hpp  grid.cpp  grid.hpp  kernels.cu  kernels.cuh  levels.hpp  memory.cpp  memory.hpp  solver.cu  solver.cuh  solver_linear.cu  solver_linear.cuh  solver_nonlinear_error.cu  solver_nonlinear_error.cuh  solver_nonlinear_full.cu  solver_nonlinear_full.cuh  timer.cpp  timer.hpp  utilities.cpp  utilities.hpp
src/modules/: boundary_conditions.hpp  interfaces.hpp  interpolators.hpp  norms.hpp  restrictors.hpp
src/modules/interfaces/: boundary_conditions.cuh  boundary_conditions.hpp  equation.cuh  equation.hpp  interpolator.cuh  iterator.cuh  lhs.cuh  norm.cuh  parallel.cuh  restrictor.cuh  rhs.hpp
src/modules/interpolators/: interpolator_linear.cu  interpolator_linear.cuh  interpolator_linear_2d.cu  interpolator_linear_2d.cuh
src/modules/math/: add.cu  add.cuh  copy.cu  copy.cuh  sub.cu  sub.cuh
src/modules/norms/: norm_amax.cu  norm_amax.cuh  norm_l2.cu  norm_l2.cuh  norm_l2_2d.cu  norm_l2_2d.cuh
src/modules/restrictors/: restrictor_full_weighting.cu  restrictor_full_weighting.cuh  restrictor_full_weighting_2d.cu  restrictor_full_weighting_2d.cuh  restrictor_injection.cu  restrictor_injection.cuh
