set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/performance)
set(TARGET_NAME lhs)
add_executable(${TARGET_NAME} main.cpp lhs_cpu.cu lhs_naive.cu lhs_smem.cu schemes.cuh equation.cpp)
set_target_properties(${TARGET_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_include_directories(${TARGET_NAME} PUBLIC ../..)
target_link_libraries(${TARGET_NAME} PUBLIC Src CUDA::cudart CUDA::cublas)
